--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -51,7 +51,7 @@ enabled = true
 [experimental.webhooks]
 enabled = true
 [functions.process-book-cover]
-verify_jwt = false
+verify_jwt = true
 
 [functions.ebay-account-deletion]
 verify_jwt = false
@@ -61,4 +61,24 @@ verify_jwt = true
 
 [functions.ebay-oauth-callback]
 verify_jwt = false
+
+[functions.export-inventory-csv]
+enabled = true
+verify_jwt = true
+
+[functions.delete-items]
+enabled = true
+verify_jwt = true
+
+[functions.mirror-cover]
+enabled = true
+verify_jwt = true
+
+[functions.oauth-health]
+enabled = true
+verify_jwt = true
+
+[functions.inventory-health]
+enabled = true
+verify_jwt = true
 
